force-app/main/default/objects/Business_Entity__c/Business_Entity__c.object-meta.xml
<CustomObject>
    <description>This object holds a list of business entities used in the Operational Risk Management (Operational Risk Reviews) application.</description>
    <label>Business Entity</label>
    <nameField>
        <label>Entity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Business Entities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>