force-app/main/default/objects/Business_Entity__c/fields/Geography__c.field-meta.xml
<CustomField>
    <fullName>Geography__c</fullName>
    <label>Geography</label>
    <length>100</length>
    <type>Text</type>
</CustomField>