force-app/main/default/objects/Business_Entity__c/fields/Managed_Segment__c.field-meta.xml
<CustomField>
    <fullName>Managed_Segment__c</fullName>
    <label>Business Unit</label>
    <length>100</length>
    <type>Text</type>
</CustomField>