force-app/main/default/objects/Business_Entity__c/fields/Reporting_Level_1__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Level_1__c</fullName>
    <label>Top Level Reporting</label>
    <length>100</length>
    <type>Text</type>
</CustomField>