force-app/main/default/objects/Business_Entity__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Geography__c</columns>
    <columns>Reporting_Level_1__c</columns>
    <columns>Managed_Segment__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>